src/objects/Appointment_Schedular__c.object
<CustomObject>
    <description>use for mapping the access table</description>
    <fields>
        <fullName>ACCTKEY__c</fullName>
        <label>ACCTKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDBY__c</fullName>
        <label>ADDBY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDDTTM__c</fullName>
        <label>ADDDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADDRKEY__c</fullName>
        <label>ADDRKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALLEY__c</fullName>
        <label>ALLEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APKEY__c</fullName>
        <label>APKEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AREA__c</fullName>
        <label>AREA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARRIVAL_TI__c</fullName>
        <label>ARRIVAL_TI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASGNFLAG__c</fullName>
        <label>ASGNFLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGTNO__c</fullName>
        <label>BGTNO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALLRKEY__c</fullName>
        <label>CALLRKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CASEFLAG__c</fullName>
        <label>CASEFLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLERICDTTM__c</fullName>
        <label>CLERICDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>COMMENTS__c</fullName>
        <label>COMMENTS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMPKEY__c</fullName>
        <label>COMPKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUSTFLAG__c</fullName>
        <label>CUSTFLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEMAND__c</fullName>
        <label>DEMAND</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DISTRICT__c</fullName>
        <label>DISTRICT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTTOFT__c</fullName>
        <label>DISTTOFT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DISTTOM__c</fullName>
        <label>DISTTOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EARLIEST_A__c</fullName>
        <label>EARLIEST_A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INSPDAYS__c</fullName>
        <label>INSPDAYS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INSPDTTM__c</fullName>
        <label>INSPDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>INSPECTR__c</fullName>
        <label>INSPECTR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSPFLAG__c</fullName>
        <label>INSPFLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSPHRS__c</fullName>
        <label>INSPHRS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INSPMINS__c</fullName>
        <label>INSPMINS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INWORKFLAG__c</fullName>
        <label>INWORKFLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATITUDE__c</fullName>
        <label>LATITUDE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOC__c</fullName>
        <label>LOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LONGITUDE__c</fullName>
        <label>LONGITUDE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkID__c</fullName>
        <label>LinkID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAPNO__c</fullName>
        <label>MAPNO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODBY__c</fullName>
        <label>MODBY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODDTTM__c</fullName>
        <label>MODDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MOREWORK__c</fullName>
        <label>MOREWORK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTITION__c</fullName>
        <label>PARTITION</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRCLKEY__c</fullName>
        <label>PRCLKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRI__c</fullName>
        <label>PRI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROBDTTM__c</fullName>
        <label>PROBDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PROB__c</fullName>
        <label>PROB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ__c</fullName>
        <label>PROJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTYCALLS__c</fullName>
        <label>QTYCALLS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RESCODE__c</fullName>
        <label>RESCODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESDTTM__c</fullName>
        <label>RESDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RESDUEDTTM__c</fullName>
        <label>RESDUEDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RESFLAG__c</fullName>
        <label>RESFLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROUTE__c</fullName>
        <label>ROUTE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCDCMPDTTM__c</fullName>
        <label>SCDCMPDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCHDUEDTTM__c</fullName>
        <label>SCHDUEDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCHEDDTTM__c</fullName>
        <label>SCHEDDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SEQUENCE__c</fullName>
        <label>SEQUENCE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SERVE_TIME__c</fullName>
        <label>SERVE_TIME</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SERVICE_SI__c</fullName>
        <label>SERVICE_SI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SERVLINK__c</fullName>
        <label>SERVLINK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SERVNO__c</fullName>
        <label>SERVNO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SET__c</fullName>
        <label>SET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRC__c</fullName>
        <label>SRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRTYPE__c</fullName>
        <label>SRTYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STARTDTTM__c</fullName>
        <label>STARTDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>STDUEDTTM__c</fullName>
        <label>STDUEDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SUBAREA__c</fullName>
        <label>SUBAREA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUSPDTTM__c</fullName>
        <label>SUSPDTTM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TAKENBY__c</fullName>
        <label>TAKENBY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TALLY_ROUT__c</fullName>
        <label>TALLY_ROUT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XCOORD__c</fullName>
        <label>XCOORD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YCOORD__c</fullName>
        <label>YCOORD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Appointment Schedular</label>
    <nameField>
        <label>Appointment Schu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment Schedulars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>